--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,19 +11,37 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Step 2: Setup .NET environment
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: "9.0"
 
+      # Step 3: Restore NuGet dependencies
       - name: Restore NuGet Dependencies
         run: dotnet restore
 
+      # Step 4: Build the solution
       - name: Build Solution
-        run: dotnet build --no-restore
+        run: dotnet build --no-restore --configuration Release
 
+      # Step 5: Run tests
       - name: Run Tests
         run: dotnet test --no-build --verbosity normal
+
+      # Step 6: Pack NuGet package
+      - name: Pack NuGet Package
+        run: dotnet pack --no-build --configuration Release --output ./nuget-packages
+
+      # Step 7: Push NuGet package to NuGet.org
+      - name: Publish to NuGet.org
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}  # Usa il Secret al posto della chiave hardcoded
+        run: |
+          dotnet nuget push ./nuget-packages/*.nupkg \
+            --api-key $NUGET_API_KEY \
+            --source https://api.nuget.org/v3/index.json
