--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -49,5 +49,5 @@ jobs:
             --name github "https://nuget.pkg.github.com/giulio-pascolat/index.json"   
           
           dotnet nuget push "Greeting/bin/Relese/Greeting.1.0.${{github.run_number}}.nupkg"  \
-            --api-key ${{ secrets.TOKEN }}
+            --api-key ${{ secrets.TOKEN }} \
             --source "github"
