--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -48,6 +48,6 @@ jobs:
             --store-password-in-clear-text \
             --name github "https://nuget.pkg.github.com/giulio-pascolat/index.json"   
           
-          dotnet nuget push "theGreetingKata/bin/Release/Greeting.1.0.${{github.run_number}}.nupkg"  \
+          dotnet nuget push ./nuget-packages/Greeting.1.0.22.nupkg  \
             --api-key ${{ secrets.TOKEN }} \
             --source "github"
