--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,35 +11,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 2: Setup .NET environment
       - name: Setup .NET
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: "9.0"
 
-      # Step 3: Restore NuGet dependencies
       - name: Restore NuGet Dependencies
         run: dotnet restore
 
-      # Step 4: Build the solution
       - name: Build Solution
         run: dotnet build --no-restore --configuration Release
-        
+
       - name: Build the Tests Project
         run: dotnet build ./Tests/Tests.csproj --configuration Debug --no-restore
 
       - name: Run Tests
         run: dotnet test --no-build --verbosity normal --diag ./test.log
 
-      # Step 6: Pack NuGet package
       - name: Pack NuGet Package
-        run: dotnet pack --no-build --configuration Release --output ./nuget-packages
+        run: dotnet pack --configuration Release --output ./nuget-packages
 
-      # Step 7: Push NuGet package to NuGet.org
       - name: ExecutePush
         run: |
           dotnet nuget add source \
@@ -48,6 +42,6 @@ jobs:
             --store-password-in-clear-text \
             --name github "https://nuget.pkg.github.com/giulio-pascolat/index.json"   
           
-          dotnet nuget push "/home/runner/work/theGreetingKata/theGreetingKata/theGreetingKata/bin/Release/Greeting.1.0.${{github.run_number}}.nupkg"  \
+          dotnet nuget push "./nuget-packages/Greeting.1.0.${{github.run_number}}.nupkg"  \
             --api-key ${{ secrets.TOKEN }} \
             --source "github"
